# secret-clan

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  samconfig.toml  template.yaml
.github/workflows/: build-and-test.yml  deploy.yml
backend/: Cargo.toml  build.rs  tarpaulin-report.html
backend/"/tmp"/games/: db
backend/benches/: benchmark.rs  database.rs  games.rs
backend/src/: bin.rs  lib.rs  main.rs
backend/src/config/: mod.rs
backend/src/db/: change_listener.rs  client.rs  database.rs  mod.rs
backend/src/jobs/: cleanup_games.rs  cleanup_players.rs  housekeeping.rs  mod.rs
backend/src/logic/: games.rs
backend/src/model/: card.rs  game.rs  messages.rs  mod.rs  player.rs  role.rs  task.rs  vote.rs  websocket.rs
backend/src/model/proto/: card.rs  game.rs  message.rs  mod.rs  player.rs  role.rs  task.rs  vote.rs
backend/src/persistence/: async_repo.rs  mod.rs  repo_client.rs  repository.rs
backend/src/server/: app_context.rs  auth.rs  connections.rs  errors.rs  logger.rs  mod.rs  reply.rs
backend/src/server/endpoints/: active_game.rs  games.rs  mod.rs  players.rs  tasks.rs  websocket.rs
backend/src/server/endpoints/client_messages/: auth_confirmed.rs  game_started.rs  mod.rs  name_updated.rs
backend/src/server/tasks/: disclose_role.rs  discuss.rs  mod.rs  settings.rs  vote.rs
backend/src/server/ws/: client.rs  connections.rs  mod.rs
docs/images/raw/: roles.xml
frontend/: .babelrc  .eslintrc.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.svelte  main.js
frontend/src/components/: App.svelte
frontend/src/components/avatar/: Editor.svelte
frontend/src/components/buttons/: ActionRow.svelte  ArrowLeft.svelte  ArrowRight.svelte  InternalLink.svelte  Primary.svelte  Secondary.svelte
frontend/src/components/game/: Blinds.svelte  Card.svelte  Credits.svelte  InactivePlayer.svelte
frontend/src/components/headers/: DialogHeader.svelte
frontend/src/components/inputs/: Label.svelte  TextInput.svelte
frontend/src/components/layout/: Dialog.svelte  Divider.svelte
frontend/src/components/navigation/: backToStart.svelte
frontend/src/routes/: GameLobby.svelte  Games.svelte  Home.svelte  Login.svelte
frontend/src/routes/errors/: NotFound.svelte  Unexpected.svelte
frontend/src/routes/pages/: ActiveGame.svelte  Settings.svelte
frontend/src/types/: Game.ts  Messages.ts  Player.ts  Role.ts  Tasks.ts
frontend/src/utils/: auth.ts  requests.ts
schema/: card.proto  game.proto  message.proto  player.proto  role.proto  task.proto
(+13 files in other folders)
