[package]
authors = ["Florian Richter <floririchte@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "secret-clan"
version = "0.1.0"

[dependencies]
bincode = "1.3"
chrono = {version = "0.4", features = ["serde"]}
crypto-mac = "0.9"
dirs = "3.0"
envconfig = "0.9"
flexi_logger = "0.16"
hmac = "0.9"
jwt = "0.11"
log = "0.4"
names = "0.11"
nanoid = "0.3"
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.9"
sled = "0.34"
tokio = {version = "0.2", features = ["full"]}
warp = "0.2"
