[package]
authors = ["Florian Richter <floririchte@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "secret_clan"
version = "0.1.0"

[lib]
bench = false
name = "secret_clan"
path = "src/lib.rs"

[[bin]]
bench = false
name = "secret_clan"
path = "src/bin.rs"

[[bench]]
harness = false
name = "secret_clan"
path = "benches/benchmark.rs"

[dependencies]
bincode = "1.3"
chrono = {version = "0.4", features = ["serde"]}
clokwerk = "0.3"
crypto-mac = "0.9"
derivative = "2.1"
dirs = "3.0"
envconfig = "0.9"
flexi_logger = {version = "0.16", features = ["colors"]}
futures = "0.3"
hmac = "0.9"
jwt = "0.11"
log = "0.4"
names = "0.11"
nanoid = "0.3"
rand = "0.8"
rand_pcg = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.9"
sled = "0.34"
tokio = {version = "0.2", features = ["full"]}
warp = "0.2"

[dev-dependencies]
criterion = "0.3"
